# app/services/json_models_service.rb
@@ -8,15 +8,15 @@ class JsonModelsService
   end
 
   def self.aids
-    JSON.parse(Aid.activated.to_json(:only => [ :id, :name, :slug, :short_description, :rule_id, :contract_type_id, :ordre_affichage ], :include => {filters: {only:[:id, :slug]}, custom_filters: {only:[:id, :slug, :custom_parent_filter_id]}, level3_filters: {only:[:id, :slug]}}))
+    JSON.parse(Aid.activated.to_json(:only => [ :id, :name, :slug, :short_description, :rule_id, :contract_type_id, :ordre_affichage ], :include => {filters: {only:[:id, :slug]}, custom_filters: {only:[:id, :slug, :custom_parent_filter_id]}, need_filters: {only:[:id, :slug]}}))
   end
 
   def self.filters
     JSON.parse(Filter.all.to_json(:only => [ :id, :slug ]))
   end
 
-  def self.level3_filters
-    JSON.parse(Level3Filter.all.to_json(:only => [ :id, :slug ]))
+  def self.need_filters
+    JSON.parse(NeedFilter.all.to_json(:only => [ :id, :slug ]))
   end
 
   def self.custom_filters
