# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 2018_11_12_105620) do
+ActiveRecord::Schema.define(version: 2018_11_12_105622) do
 
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
@@ -48,6 +48,11 @@ ActiveRecord::Schema.define(version: 2018_11_12_105620) do
 
   create_table "aids_level3_filters", id: false, force: :cascade do |t|
     t.bigint "level3_filter_id", null: false
+    t.bigint "aid_id", null: false
+  end
+
+  create_table "aids_need_filters", id: false, force: :cascade do |t|
+    t.bigint "need_filter_id", null: false
     t.bigint "aid_id", null: false
   end
 
@@ -147,7 +152,7 @@ ActiveRecord::Schema.define(version: 2018_11_12_105620) do
     t.index ["slug"], name: "index_level2_filters_on_slug", unique: true
   end
 
-  create_table "level3_filters", force: :cascade do |t|
+  create_table "need_filters", force: :cascade do |t|
     t.string "name"
     t.text "description"
     t.datetime "created_at", null: false
@@ -155,8 +160,8 @@ ActiveRecord::Schema.define(version: 2018_11_12_105620) do
     t.string "slug"
     t.bigint "level2_filter_id"
     t.boolean "confidentiality", default: true
-    t.index ["level2_filter_id"], name: "index_level3_filters_on_level2_filter_id"
-    t.index ["slug"], name: "index_level3_filters_on_slug", unique: true
+    t.index ["level2_filter_id"], name: "index_need_filters_on_level2_filter_id"
+    t.index ["slug"], name: "index_need_filters_on_slug", unique: true
   end
 
   create_table "rule_checks", force: :cascade do |t|
@@ -224,6 +229,6 @@ ActiveRecord::Schema.define(version: 2018_11_12_105620) do
   add_foreign_key "custom_filters", "custom_parent_filters"
   add_foreign_key "custom_rule_checks", "rules"
   add_foreign_key "level2_filters", "level1_filters"
-  add_foreign_key "level3_filters", "level2_filters"
+  add_foreign_key "need_filters", "level2_filters"
   add_foreign_key "rules", "variables"
 end
